force-app/main/default/objects/Case_Participant__c/Case_Participant__c.object-meta.xml
<CustomObject>
    <description
  >Tracks additional contacts who have been granted access to a support case, enabling multi-party collaboration on tickets.</description>
    <label>Case Participant</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Participant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>