force-app/main/default/objects/Case_Participant__c/fields/Added_By__c.field-meta.xml
<CustomField>
    <fullName>Added_By__c</fullName>
    <description
  >The user who added this participant to the case. Auto-populated on creation.</description>
    <label>Added By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Case Participants Added</relationshipLabel>
    <relationshipName>Case_Participants_Added</relationshipName>
    <type>Lookup</type>
</CustomField>