force-app/main/default/objects/Case_Participant__c/fields/Added_Date__c.field-meta.xml
<CustomField>
    <fullName>Added_Date__c</fullName>
    <description
  >The date and time this participant was added to the case. Auto-populated on creation.</description>
    <label>Added Date</label>
    <type>DateTime</type>
</CustomField>