force-app/main/default/objects/Case_Participant__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description
  >The participant's role on this case. Participant can view and comment; Watcher (future) receives notifications only.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Participant</fullName>
                <default>true</default>
                <label>Participant</label>
            </value>
            <value>
                <fullName>Watcher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>